feat : convert memref.alloc out of gpu.launch to gpu.alloc

--- a/mlir/lib/Conversion/CMakeLists.txt
+++ b/mlir/lib/Conversion/CMakeLists.txt
@@ -48,3 +48,9 @@ add_subdirectory(VectorToLLVM)
 add_subdirectory(VectorToGPU)
 add_subdirectory(VectorToSCF)
 add_subdirectory(VectorToSPIRV)
+
+# /*============================================================================*/
+# /*                        lijx: MemrefAlloc to GPUAlloc                       */
+# /*============================================================================*/
+
+add_subdirectory(MemrefAllocToGPU)
