feat : convert memref.dealloc out of gpu.launch to gpu.dealloc

--- a/mlir/lib/Conversion/CMakeLists.txt
+++ b/mlir/lib/Conversion/CMakeLists.txt
@@ -55,3 +55,4 @@ add_subdirectory(VectorToSPIRV)
 # /*============================================================================*/
 
 add_subdirectory(MemrefAllocToGPU)
+add_subdirectory(MemrefDeallocToGPU)
