--- a/mlir/lib/Conversion/MemRefAllocToGPU/CMakeLists.txt
+++ b/mlir/lib/Conversion/MemRefAllocToGPU/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_mlir_conversion_library(MemRefAllocToGPU
-  MemrefAllocToGPU.cpp
+  MemRefAllocToGPU.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${MLIR_MAIN_INCLUDE_DIR}/mlir/Conversion/MemRefAllocToGPU
