fix: the memref.alloc that defines the return value will not be converted to gpu.alloc warning: don't use -convert-getglobal-to-host, it's incomplete

--- a/mlir/lib/Conversion/CMakeLists.txt
+++ b/mlir/lib/Conversion/CMakeLists.txt
@@ -62,3 +62,10 @@ add_subdirectory(MemRefDeallocToGPU)
 # /*============================================================================*/
 
 add_subdirectory(MemRefAllocaToAlloc)
+
+
+# /*============================================================================*/
+# /*                  lijx: register memref.get_global to host                  */
+# /*============================================================================*/
+
+# add_subdirectory(GetGlobalToHost)
